@@ -1,5 +1,8 @@
 0.23.1	UNRELEASED
 
+ * Support ``depth`` for local clones.
+   (Jelmer Vernooĳ)
+
  * Add basic support for managing Notes. (Jelmer Vernooĳ)
 
  * Add basic ``cherry-pick`` subcommand.  (#1599, Jelmer Vernooĳ)
